--- a/less/mixin.less
+++ b/less/mixin.less
@@ -3,6 +3,12 @@
   padding: 0;
 }
 
+.reset-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 .visually-hidden { 
   position: absolute;
   width: 1px;
