--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -42,3 +42,16 @@ button {
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0);
 }
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 45px;
+  font-size: 38px;
+  font-weight: 700;
+  letter-spacing: 0.06em;
+  text-align: center;
+  
+  span {
+    color: #fe701a;
+  }
+}
