--- a/less/blocks/wrapper.less
+++ b/less/blocks/wrapper.less
@@ -5,3 +5,17 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.link {
+  margin-top: 50px;
+  display: block;
+  letter-spacing: 0.06em;
+  text-align: center;
+  color: #21c3f1;
+  text-decoration: underline;
+  
+  &:hover,
+  &:active {
+    text-decoration: none;
+  }
+}
