--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -5,6 +5,7 @@ body {
   font-size: 18px;
   line-height: 1.2;
   font-weight: 400;
+  color: #000;
 }
 
 img {
@@ -54,4 +55,13 @@ h1 {
   span {
     color: #fe701a;
   }
+}
+
+h2 {
+  margin-top: 0;
+  font-size: 38px;
+  font-weight: 500;
+  letter-spacing: 0.06em;
+  color: #2b2826;
+  text-align: center;
 }
