--- a/less/style.less
+++ b/less/style.less
@@ -8,3 +8,7 @@
 @import "blocks/logo";
 @import "blocks/menu";
 @import "blocks/promo";
+@import "blocks/scheme";
+@import "blocks/rules";
+@import "blocks/info";
+@import "blocks/docs";
