--- a/less/style.less
+++ b/less/style.less
@@ -12,3 +12,8 @@
 @import "blocks/rules";
 @import "blocks/info";
 @import "blocks/docs";
+@import "blocks/price";
+@import "blocks/factors";
+@import "blocks/call";
+@import "blocks/task";
+@import "blocks/contacts";
