--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -65,3 +65,11 @@ h2 {
   color: #2b2826;
   text-align: center;
 }
+
+h3 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 0.06;
+}
