--- a/less/blocks/rules.less
+++ b/less/blocks/rules.less
@@ -1,5 +1,6 @@
 .rules {
-  padding-top: 35px;
+  min-width: 1330px;
+  padding-top: 30px;
   background-color: #fe701a;
   color: #fff;
   
@@ -12,12 +13,18 @@
   max-width: 1230px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
+  margin-top: 65px;
   font-size: 22px;
   letter-spacing: 0.06em;
   text-align: center;
   border-top: 1px solid rgba(255,255,255,0.341);
   border-bottom: 1px solid rgba(255,255,255,0.341);
+  
+  p {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
 }
 
 .rules__order {
