--- a/less/blocks/call.less
+++ b/less/blocks/call.less
@@ -1,4 +1,5 @@
 .call {
+  min-width: 1330px;
   padding-top: 50px;
   padding-bottom: 80px;
   color: #fff;
@@ -10,6 +11,7 @@
   margin-top: 0;
   margin-bottom: 40px;
   font-weight: 300;
+  font-size: 28px;
   
   b {
     font-weight: 700;
