--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -1,4 +1,5 @@
 .contacts {
+  min-width: 1330px;
   position: relative;
   height: 644px;
   background-image: url(../img/map.jpg);
@@ -21,7 +22,8 @@
   z-index: 5;
   transform: translateY(-50%);
   width: 347px;
-  padding: 25px 15px;
+  padding: 30px 20px;
+  padding-bottom: 45px;
   color: #fff;
   border-radius: 4px;
   background-color: rgb(42, 41, 39);
@@ -46,18 +48,21 @@
     left: 0;
     right: 0;
     bottom: 0;
+    border-radius: 4px;
     background-color: rgb(42, 41, 39);
   }
 }
 
 .contacts__name {
   margin-top: 0;
+  margin-bottom: 10px;
   font-weight: 700;
   letter-spacing: 0.06em;
 }
 
 .contacts__position {
-  margin-bottom: 25px;
+  margin-top: 0;
+  margin-bottom: 30px;
   font-size: 14px;
   font-weight: 300;
   letter-spacing: 0.06em;
