--- a/less/blocks/factors.less
+++ b/less/blocks/factors.less
@@ -1,4 +1,5 @@
 .factors {
+  min-width: 1330px;
   padding-top: 60px;
   padding-bottom: 55px;
   overflow: hidden;
@@ -8,6 +9,7 @@
   }
   
   h3 {
+    margin-bottom: 13px;
     color: #181616;
   }
 }
@@ -19,7 +21,7 @@
 
 .factors__item {
   position: relative;
-  padding-top: 40px;
+  padding-top: 30px;
   padding-bottom: 10px;
   padding-left: 80px;
   color: #181616;
