--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -5,6 +5,7 @@
   left: 0;
   right: 0;
   padding: 10px 20px;
+  padding-top: 13px;
   background-color: #fff;
   
   &::before {
@@ -16,12 +17,12 @@
     right: 0;
     height: 10px;
     background-image: linear-gradient(to top, rgba(195,195,195,0.3), rgba(255,255,255,0));
-//    box-shadow: inset 0 0 35px 0 rgba(36,35,33,0.67);
   }
 }
 
 .header__wrap {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
