--- a/less/blocks/info.less
+++ b/less/blocks/info.less
@@ -1,8 +1,12 @@
 .info {
   padding-top: 115px;
-  padding-bottom: 55px;
+  padding-bottom: 60px;
   color: #262423;
   letter-spacing: 0.06em;
+  
+  h2 {
+    margin-bottom: 40px;
+  }
   
   ul {
     .reset-list();
@@ -21,7 +25,7 @@
   }
   
   &--rules {
-    padding-top: 50px;
+    padding-top: 43px;
     border-top: 1px solid rgb(236, 236, 236);
   }
 }
