--- a/less/blocks/price.less
+++ b/less/blocks/price.less
@@ -1,4 +1,5 @@
 .price {
+  min-width: 1330px;
   padding-top: 55px;
   position: relative;
   z-index: 2;
@@ -32,6 +33,13 @@
     font-size: 18px;
     font-weight: 500;
     letter-spacing: 0.06em;
+    
+    a {
+      &:hover,
+      &:active {
+        text-decoration: underline;
+      }
+    }
   }
   
   p {
@@ -48,7 +56,7 @@
   .reset-list();
   position: relative;
   z-index: 5;
-  margin-top: 115px;
+  margin-top: 123px;
 }
 
 .price__item {
@@ -56,6 +64,7 @@
   position: relative;
   padding-top: 25px;
   padding-bottom: 25px;
+  padding-right: 50px;
   
   &::before {
     content: "";
@@ -72,11 +81,18 @@
 .price__next {
   position: absolute;
   top: 50%;
-  right: -50px;
+  right: 10px;
   transform: translateY(-50%);
   width: 51px;
   height: 51px;
   background-image: url(../img/next-page.png);
   background-repeat: no-repeat;
   background-size: contain;
+  .transition();
+  
+  &:hover,
+  &:active {
+    opacity: 0.7;
+    .transition();
+  }
 }
