--- a/less/blocks/promo.less
+++ b/less/blocks/promo.less
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-width: 1330px;
   height: 100vh;
   position: relative;
   background-color: #010101;
