--- a/less/blocks/scheme.less
+++ b/less/blocks/scheme.less
@@ -1,9 +1,23 @@
 .scheme {
   padding-top: 50px;
-  padding-bottom: 20px;
+  padding-bottom: 18px;
   
   h2 {
-    margin-bottom: 20px;
+    margin-bottom: 13px;
+    
+    span {
+      position: relative;
+    
+      &::before {
+        content: "";
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        width: 26px;
+        height: 6px;
+        background-color: @orange;
+      }
+    }
   }
 }
 
@@ -27,7 +41,7 @@
   width: 260px;
   min-height: 285px;
   padding-top: 100px;
-  margin-bottom: 45px;
+  margin-bottom: 50px;
   margin-left: 30px;
   margin-right: 30px;
   text-align: center;
