--- a/less/blocks/task.less
+++ b/less/blocks/task.less
@@ -1,6 +1,6 @@
 .task {
   padding-top: 50px;
-  padding-bottom: 40px;
+  padding-bottom: 35px;
   font-weight: 300;
   letter-spacing: 0.06em;
   
@@ -11,6 +11,7 @@
 
 .task__subtitle {
   margin-top: 80px;
+  margin-bottom: 45px;
   color: @orange;
   font-size: 22px;
   font-weight: 700;
@@ -19,7 +20,6 @@
 }
 
 .task__point {
-  
   span {
     margin-left: 60px;
     position: relative;
