--- a/less/blocks/docs.less
+++ b/less/blocks/docs.less
@@ -16,11 +16,14 @@
 }
 
 .docs__slider {
+  width: 1180px;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 50px;
 }
 
 .docs__slide {
-  width: 310px;
+  width: 280px;
   box-sizing: border-box;
   text-align: center;
   font-size: 16px;
@@ -51,11 +54,6 @@
   background-size: 25px 47px;
 }
 
-.docs__prev {
-  left: -25px;
-}
-
 .docs__next {
-  right: -25px;
   transform: rotate(180deg);
 }
