--- a/less/blocks/scheme.less
+++ b/less/blocks/scheme.less
@@ -1,6 +1,7 @@
 .scheme {
   padding-top: 50px;
   padding-bottom: 18px;
+  overflow: hidden;
   
   h2 {
     margin-bottom: 13px;
@@ -42,8 +43,8 @@
   min-height: 285px;
   padding-top: 100px;
   margin-bottom: 50px;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
   text-align: center;
   border-top: 6px solid rgb(254, 112, 26);
   background-color: rgb(252, 250, 250);
